fixed overflow-x issue

--- a/public/css/index/navbar.css
+++ b/public/css/index/navbar.css
@@ -1,3 +1,11 @@
+body,
+html {
+  overflow-x: hidden;
+}
+
+body {
+  position: relative;
+}
 .page-wrapper {
   width: 100%;
   height: auto;
